
v1.7.20:
 - Feature: allow to set ingress net filter in user config
 - Feature: always log the raw input user name, so you will get the real user name if auth against anonymous user

v1.7.19:
 - Feature: support PROXY Protocol in PlainTcpPort and PlainTlsPort server
 - Feature: support transmute udp peer addr in proxy_socks5 escaper
 - Optimization: rename and deprecate options in socks_proxy server:
     - auto_reply_local_ip_map -> transmute_udp_echo_ip

v1.7.18:
 - Feature: add license info to deb and rpm package files

v1.7.17:
 - Feature: add route_failover escaper

v1.7.16:
 - Compatibility: update build dependencies

v1.7.15:
 - Optimization: set correct default CA path if build using vendored openssl
 - Feature: allow no auth in socks5 proxy if anonymous user is enabled
 - Feature: add dns-over-quic support in trust-dns resolver
 - Compatibility: compile on MacOS / FreeBSD / NetBSD

v1.7.14:
 - BUG FIX: fix the parse of ICAP OPTIONS response

v1.7.13:
 - BUG FIX: fix the fetch of ICAP options
 - Feature: allow to set anonymous user in user group
 - Feature: allow to set retry in failover resolver if the first answer is empty

v1.7.12:
 - Optimization: do batch tcp accept
 - Feature: try best to reserve the case of http header name
 - Removed: remove uri path match in http_rproxy server

v1.7.11:
 - BUG FIX: fix reload of resolver with changed internal dependency
 - Feature: allow string value type for tls cert generator config
 - Feature: allow to output dependency graph in graphviz / mermaid / plantuml format
 - Feature: use metrics name for server/escaper/user-group/resolver/auditor name
 - Removed: drop support for http dynamic user source

v1.7.10:
 - Feature: support happy-eyeballs for resolve redirected domain
 - Feature: allow to set resolve strategy at user-site level
 - Optimization: enable tcp_nodelay by default if needed

v1.7.9:
 - BUG FIX: fix the parse of weighted upstream address
 - BUG FIX: fix the clean of offline servers