@@ -43,7 +43,7 @@ pub(crate) struct SniProxyServerConfig {
     pub(crate) escaper: MetricsName,
     pub(crate) auditor: MetricsName,
     pub(crate) shared_logger: Option<AsciiString>,
-    pub(crate) listen: TcpListenConfig,
+    pub(crate) listen: Option<TcpListenConfig>,
     pub(crate) listen_in_worker: bool,
     pub(crate) ingress_net_filter: Option<AclNetworkRuleBuilder>,
     pub(crate) tcp_sock_speed_limit: TcpSockSpeedLimitConfig,
@@ -68,7 +68,7 @@ impl SniProxyServerConfig {
             escaper: MetricsName::default(),
             auditor: MetricsName::default(),
             shared_logger: None,
-            listen: TcpListenConfig::default(),
+            listen: None,
             listen_in_worker: false,
             ingress_net_filter: None,
             tcp_sock_speed_limit: TcpSockSpeedLimitConfig::default(),
@@ -125,8 +125,9 @@ impl SniProxyServerConfig {
                 Ok(())
             }
             "listen" => {
-                self.listen = g3_yaml::value::as_tcp_listen_config(v)
+                let config = g3_yaml::value::as_tcp_listen_config(v)
                     .context(format!("invalid tcp listen config value for key {k}"))?;
+                self.listen = Some(config);
                 Ok(())
             }
             "listen_in_worker" => {
